Hatalı gönderiyorum.Nested fragmentsları deneme aşamasındayım

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,6 @@
     <string name="title_home">Home</string>
     <string name="title_dashboard">Dashboard</string>
     <string name="title_notifications">Notifications</string>
-    <string name="accesible">Accesible</string>
+    <string name="challenge">Challenge</string>
     <string name="profile">Profile</string>
 </resources>
