New ve Past Challenge siliniyor. Sadece ChallengeFragment kullanılacak

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,8 @@
     <string name="title_notifications">Notifications</string>
     <string name="challenge">Challenge</string>
     <string name="profile">Profile</string>
+
+    <string name="action_past_challenge">past</string>
+    <string name="action_new_challenge">new</string>
+
 </resources>
