HomeFragment'a camping ve trekking eklemek üzereyim

--- a/app/src/main/res/values-tr-rTR/strings.xml
+++ b/app/src/main/res/values-tr-rTR/strings.xml
@@ -3,7 +3,7 @@
 
     <!--VideoActivity-->
     <string name="login_button">Giriş Yap</string>
-    <string name="signup_button">Üye ol</string>
+    <string name="signup_button">Üye Ol</string>
 
     <!--HomeFragment-->
     <string name="step_counter">Adım Sayar</string>
