--- a/app/src/main/res/values-tr-rTR/strings.xml
+++ b/app/src/main/res/values-tr-rTR/strings.xml
@@ -16,7 +16,7 @@
     <string name="start_button">BAŞLA</string>
     <string name="glass_text">bardak</string>
     <string name="water_text">Su</string>
-    <string name="weight_text">ağırlık</string>
+    <string name="weight_text">Ağırlık</string>
     <string name="go_button">Başla</string>
     <string name="lunch_text">Öğle Yemeği</string>
     <string name="add_button">Ekle</string>
@@ -42,10 +42,10 @@
     <string name="next_button">İleri</string>
 
     <!--ActivitySignUp-->
-    <string name="name_text">isim</string>
-    <string name="surname_text">soyisim</string>
-    <string name="create_account">Hesap Yarat</string>
-    <string name="member_message">Zaten üye misiniz?Oturum aç</string>
+    <string name="name_text">İsim</string>
+    <string name="surname_text">Soyisim</string>
+    <string name="create_account">Hesap Yaratın</string>
+    <string name="member_message">Zaten üye misiniz?Oturum açın</string>
 
     <!--DialogChallengeCard-->
     <string name="contact_name">İletişim Adı</string>
@@ -86,51 +86,51 @@
     <string name="follow_me">Takip et</string>
 
     <!--GoalType-->
-    <string name="goal_text">Amacın...?</string>
+    <string name="goal_text">Bu uygulamayı kullanmaktaki amacınız nedir?</string>
     <string name="be_healty">Sağlıklı Olmak</string>
     <string name="first_goal">Sağlıklı olmak için hem yemek tüketin,hem de öğrenin. </string>
     <string name="lose_weight">Kilo Kaybetmek</string>
-    <string name="second_goal">Get leaner and increase your stamina</string>
-    <string name="gain_weight">Gain Weight</string>
-    <string name="third_goal">Build muscle strength</string>
+    <string name="second_goal">Yağ oranınızı azaltın ve dayanaklılığınızı artırın.</string>
+    <string name="gain_weight">Kilo Almak</string>
+    <string name="third_goal">Kas gücünüzü artırın.</string>
 
     <!--ItemChallengeCards-->
-    <string name="challenge_name">Challenge Name</string>
-    <string name="challenge_type">Challenge Type</string>
-    <string name="challenge_dates">Challenge Start and End Dates</string>
-    <string name="challenge_number">Challenge People Number</string>
+    <string name="challenge_name">Meydan Okuma Adı</string>
+    <string name="challenge_type">Meydan Okuma Türü</string>
+    <string name="challenge_dates">Meydan Okuma Başlangıç ve Bitiş</string>
+    <string name="challenge_number">Challenge Sayısı</string>
 
     <!--ItemListFriends-->
-    <string name="name">Name</string>
-    <string name="goal_type">GoalType</string>
+    <string name="name">İsim</string>
+    <string name="goal_type">Hedef </string>
 
     <!--OtherInfoType-->
     <string name="other_info_heading" tools:ignore="StringEscaping">Let's go just a little part</string>
     <string name="set_goal">Set your goal</string>
     <string name="weeks">14 Weeks -</string>
     <string name="default_text">Default</string>
-    <string name="lose">Lose : </string>
+    <string name="lose">Hedefin : </string>
     <string name="kg_per_week">0.8 kg / week</string>
-    <string name="your_age">Your age (years old)</string>
-    <string name="your_height">Your height (cm)</string>
-    <string name="your_weight">Your weight (kg)</string>
-    <string name="goal_weight">Goal weight (kg)</string>
+    <string name="your_age">Yaş </string>
+    <string name="your_height">Boy (cm)</string>
+    <string name="your_weight">Kilo (kg)</string>
+    <string name="goal_weight">Hedefteki kilo (kg)</string>
 
     <!--SexType-->
-    <string name="hi_text">Hi!</string>
-    <string name="lets_start" tools:ignore="StringEscaping">Let's start with the basics</string>
-    <string name="male">Male</string>
-    <string name="female">Female</string>
+    <string name="hi_text">Merhaba!</string>
+    <string name="lets_start" tools:ignore="StringEscaping">Hadi başlayalım...</string>
+    <string name="male">Erkek</string>
+    <string name="female">Kadın</string>
 
     <!--ListFriendstoAddChallenge-->
-    <string name="search_user">search user</string>
+    <string name="search_user">kullanıcı ara</string>
 
 
-    <string name="title_home">Home</string>
-    <string name="challenge">Challenge</string>
-    <string name="profile">Profile</string>
+    <string name="title_home">Anasayfa</string>
+    <string name="challenge">Meydan Okuma</string>
+    <string name="profile">Profil</string>
 
-    <string name="action_past_challenge">past</string>
-    <string name="action_new_challenge">new</string>
+    <string name="action_past_challenge">geçmiş</string>
+    <string name="action_new_challenge">yeni</string>
 
 </resources>
